// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetLastSynced ViewerCanAdminister: false renders not scheduled 1`] = `
<ChangesetLastSynced
  _now={2020-03-01T00:00:00.000Z}
  changeset={
    Object {
      "id": "123",
      "nextSyncAt": null,
      "updatedAt": "2020-02-29T23:50:00.000Z",
    }
  }
  viewerCanAdminister={false}
>
  <small
    className="text-muted"
  >
    Last synced 
    10 minutes
     ago.
     
    <span
      data-tooltip="Not scheduled for syncing."
    >
      <Memo(InfoCircleOutlineIcon)
        className="icon-inline"
        onClick={[Function]}
      >
        <svg
          className="mdi-icon icon-inline"
          fill="currentColor"
          height={24}
          onClick={[Function]}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
      </Memo(InfoCircleOutlineIcon)>
    </span>
  </small>
</ChangesetLastSynced>
`;

exports[`ChangesetLastSynced ViewerCanAdminister: false renders scheduled 1`] = `
<ChangesetLastSynced
  _now={2020-03-01T00:00:00.000Z}
  changeset={
    Object {
      "id": "123",
      "nextSyncAt": "2020-03-02T00:00:00.000Z",
      "updatedAt": "2020-02-29T23:50:00.000Z",
    }
  }
  viewerCanAdminister={false}
>
  <small
    className="text-muted"
  >
    Last synced 
    10 minutes
     ago.
     
    <span
      data-tooltip="Next refresh in 1 day."
    >
      <Memo(InfoCircleOutlineIcon)
        className="icon-inline"
        onClick={[Function]}
      >
        <svg
          className="mdi-icon icon-inline"
          fill="currentColor"
          height={24}
          onClick={[Function]}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
      </Memo(InfoCircleOutlineIcon)>
    </span>
  </small>
</ChangesetLastSynced>
`;

exports[`ChangesetLastSynced ViewerCanAdminister: true renders not scheduled 1`] = `
<ChangesetLastSynced
  _now={2020-03-01T00:00:00.000Z}
  changeset={
    Object {
      "id": "123",
      "nextSyncAt": null,
      "updatedAt": "2020-02-29T23:50:00.000Z",
    }
  }
  viewerCanAdminister={true}
>
  <small
    className="text-muted"
  >
    Last synced 
    10 minutes
     ago.
     
    <span
      data-tooltip="Not scheduled for syncing. Click to prioritize refresh"
    >
      <Memo(SyncIcon)
        className="icon-inline cursor-pointer"
        onClick={[Function]}
      >
        <svg
          className="mdi-icon icon-inline cursor-pointer"
          fill="currentColor"
          height={24}
          onClick={[Function]}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
          />
        </svg>
      </Memo(SyncIcon)>
    </span>
  </small>
</ChangesetLastSynced>
`;

exports[`ChangesetLastSynced ViewerCanAdminister: true renders scheduled 1`] = `
<ChangesetLastSynced
  _now={2020-03-01T00:00:00.000Z}
  changeset={
    Object {
      "id": "123",
      "nextSyncAt": "2020-03-02T00:00:00.000Z",
      "updatedAt": "2020-02-29T23:50:00.000Z",
    }
  }
  viewerCanAdminister={true}
>
  <small
    className="text-muted"
  >
    Last synced 
    10 minutes
     ago.
     
    <span
      data-tooltip="Next refresh in 1 day. Click to prioritize refresh"
    >
      <Memo(SyncIcon)
        className="icon-inline cursor-pointer"
        onClick={[Function]}
      >
        <svg
          className="mdi-icon icon-inline cursor-pointer"
          fill="currentColor"
          height={24}
          onClick={[Function]}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M12,18A6,6 0 0,1 6,12C6,11 6.25,10.03 6.7,9.2L5.24,7.74C4.46,8.97 4,10.43 4,12A8,8 0 0,0 12,20V23L16,19L12,15M12,4V1L8,5L12,9V6A6,6 0 0,1 18,12C18,13 17.75,13.97 17.3,14.8L18.76,16.26C19.54,15.03 20,13.57 20,12A8,8 0 0,0 12,4Z"
          />
        </svg>
      </Memo(SyncIcon)>
    </span>
  </small>
</ChangesetLastSynced>
`;
